--- a/Website/film_and_music.html
+++ b/Website/film_and_music.html
@@ -37,7 +37,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="tour.html">TOUR</a>
                         <ul>
-                            <li><a href="books.html">Books</a></li>
+                            <li><a href="books.html">Books and Poetry</a></li>
                             <li><a href="film_and_music.html">Films and Music</a></li>
                             <li><a href="important_documents.html">Important Documents</a></li>
                             <li><a href="prominent_leaders.html">Prominent leaders</a></li>
@@ -58,7 +58,9 @@
         <h1>Tour</h1>
         <p>A virtual view inside a vessel from the war</p>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!4v1630496928253!6m8!1m7!1sCAoSLEFGMVFpcE52TjBXSjB0TTQ3cS1oYVREZjBfTTFrZVlDMzhyeHJwQWR1cVhz!2m2!1d29.9416266!2d-90.070842!3f208.64445231729223!4f-9.634051989895326!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!4v1630496928253!6m8!1m7!1sCAoSLEFGMVFpcE52TjBXSjB0TTQ3cS1oYVREZjBfTTFrZVlDMzhyeHJwQWR1cVhz!2m2!1d29.9416266!2d-90.070842!3f208.64445231729223!4f-9.634051989895326!5f0.7820865974627469"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
     <!-- Exhibition Content -->
