--- a/Website/important_documents.html
+++ b/Website/important_documents.html
@@ -37,7 +37,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="tour.html">TOUR</a>
                         <ul>
-                            <li><a href="books.html">Books</a></li>
+                            <li><a href="books.html">Books and Poetry</a></li>
                             <li><a href="film_and_music.html">Films and Music</a></li>
                             <li><a href="important_documents.html">Important Documents</a></li>
                             <li><a href="prominent_leaders.html">Prominent leaders</a></li>
