--- a/Website/art_and_sculptures.html
+++ b/Website/art_and_sculptures.html
@@ -37,7 +37,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="tour.html">TOUR</a>
                         <ul>
-                            <li><a href="books.html">Books</a></li>
+                            <li><a href="books.html">Books and Poetry</a></li>
                             <li><a href="film_and_music.html">Films and Music</a></li>
                             <li><a href="important_documents.html">Important Documents</a></li>
                             <li><a href="prominent_leaders.html">Prominent leaders</a></li>
@@ -57,28 +57,38 @@
         <h1>Tour</h1>
         <p>Remnants from the war</p>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!4v1630497472178!6m8!1m7!1sCAoSLEFGMVFpcE9iQ04yd01qTlJWZVVDUHVqZHh3bWhrQVNlZ25laU13OElGUFhB!2m2!1d29.9428321!2d-90.0705335!3f127.07018350547828!4f-4.135016468614253!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!4v1630497472178!6m8!1m7!1sCAoSLEFGMVFpcE9iQ04yd01qTlJWZVVDUHVqZHh3bWhrQVNlZ25laU13OElGUFhB!2m2!1d29.9428321!2d-90.0705335!3f127.07018350547828!4f-4.135016468614253!5f0.7820865974627469"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
     <!-- Exhibition Content -->
     <section class="items">
         <h1>Items</h1>
-        <p>During World War II, the relations between art and war can be articulated around two main issues. First, art found itself at the centre of an ideological war. Second, during World War II, many artists found themselves in the most difficult conditions and their works are a testimony to a powerful "urge to create." </p>
+        <p>During World War II, the relations between art and war can be articulated around two main issues. First, art
+            found itself at the centre of an ideological war. Second, during World War II, many artists found themselves
+            in the most difficult conditions and their works are a testimony to a powerful "urge to create." </p>
 
         <div class="exh-row">
             <div class="exh-col">
                 <h3>Background</h3>
-                <p>.Throughout history, most representations of war depict military achievements and often show significant battle scenes. However, in the 19th century a “turn” in the visual representation of war became noticeable. </p>
+                <p>.Throughout history, most representations of war depict military achievements and often show
+                    significant battle scenes. However, in the 19th century a “turn” in the visual representation of war
+                    became noticeable. </p>
             </div>
 
             <div class="exh-col">
                 <h3>Examples</h3>
-                <p>Artists started to show the disastrous aspects of war, instead of its glorified events and protagonists.Such a perspective is best exemplified by Francisco Goya's series, The Disasters of War (1810-1820), and Otto Dix's portfolio, Der Krieg (published in 1924).</p>
+                <p>Artists started to show the disastrous aspects of war, instead of its glorified events and
+                    protagonists.Such a perspective is best exemplified by Francisco Goya's series, The Disasters of War
+                    (1810-1820), and Otto Dix's portfolio, Der Krieg (published in 1924).</p>
             </div>
 
             <div class="exh-col">
                 <h3>More</h3>
-                <p>During World War II, both traditions are present. For instance, Paul Nash's Battle of Britain represents a scene of aerial combat between British and German fighters. However, André Fougeron's Street of Paris focuses on the impact of war on civilians.</p>
+                <p>During World War II, both traditions are present. For instance, Paul Nash's Battle of Britain
+                    represents a scene of aerial combat between British and German fighters. However, André Fougeron's
+                    Street of Paris focuses on the impact of war on civilians.</p>
             </div>
         </div>
     </section>
@@ -119,19 +129,23 @@
             <div class="extra-col">
                 <img src="images/alan-moore.jpg">
                 <h3>Blind Man in Belsen by Alan Moore</h3>
-                <p>Australian war artist Alan Moore painted this scene of the victims of the Bergen-Belsen concentration camp after its liberation. This painting provides a clear view into the horrors of war.</p>
+                <p>Australian war artist Alan Moore painted this scene of the victims of the Bergen-Belsen concentration
+                    camp after its liberation. This painting provides a clear view into the horrors of war.</p>
             </div>
 
             <div class="extra-col">
                 <img src="images/ls-lowry.jpg">
                 <h3>Blitzen Site by LS Lowry</h3>
-                <p>LS Lowry was working as a fire-watcher in Manchester where he would rush down to the burning buildings and paint the scene as it was still burning or smoking. He depicted the realities of war.</p>
+                <p>LS Lowry was working as a fire-watcher in Manchester where he would rush down to the burning
+                    buildings and paint the scene as it was still burning or smoking. He depicted the realities of war.
+                </p>
             </div>
 
             <div class="extra-col">
                 <img src="images/graham-sutherland.jpg">
                 <h3>The City by Graham Sutherland</h3>
-                <p>Graham Sutherland was a wartime artist who painted this scene of what use to be a tall building in London. The painting shows the war-time destruction.</p>
+                <p>Graham Sutherland was a wartime artist who painted this scene of what use to be a tall building in
+                    London. The painting shows the war-time destruction.</p>
             </div>
         </div>
     </section>
@@ -140,8 +154,8 @@
     <section class="footer">
         <h4>About Us</h4>
         <p>We at the World War II Museum aim at bringing the knowledge and experiences of the books,
-			<br>
-			music, films, art, documents and more of World War II right to your home!
+            <br>
+            music, films, art, documents and more of World War II right to your home!
         </p>
         <div class="icons">
             <i class="fab fa-facebook-f"></i>
