--- a/Website/prominent_leaders.html
+++ b/Website/prominent_leaders.html
@@ -37,7 +37,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="tour.html">TOUR</a>
                         <ul>
-                            <li><a href="books.html">Books</a></li>
+                            <li><a href="books.html">Books and Poetry</a></li>
                             <li><a href="film_and_music.html">Films and Music</a></li>
                             <li><a href="important_documents.html">Important Documents</a></li>
                             <li><a href="prominent_leaders.html">Prominent leaders</a></li>
@@ -57,7 +57,9 @@
         <h1>Tour</h1>
         <p>A view of the military of the time</p>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!4v1630497254744!6m8!1m7!1sCAoSLEFGMVFpcE5nS0hVckZ3NjNLaGJqZ2N1ZXJNRDZoM0NGUXVLNkJWSDdiS3JI!2m2!1d29.9431049!2d-90.07032439999999!3f0!4f0!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!4v1630497254744!6m8!1m7!1sCAoSLEFGMVFpcE5nS0hVckZ3NjNLaGJqZ2N1ZXJNRDZoM0NGUXVLNkJWSDdiS3JI!2m2!1d29.9431049!2d-90.07032439999999!3f0!4f0!5f0.7820865974627469"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
     <!-- Exhibition Content -->
