--- a/Website/tour.html
+++ b/Website/tour.html
@@ -37,7 +37,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="tour.html">TOUR</a>
                         <ul>
-                            <li><a href="books.html">Books</a></li>
+                            <li><a href="books.html">Books and Poetry</a></li>
                             <li><a href="film_and_music.html">Films and Music</a></li>
                             <li><a href="important_documents.html">Important Documents</a></li>
                             <li><a href="prominent_leaders.html">Prominent leaders</a></li>
@@ -89,8 +89,8 @@
     <section class="footer">
         <h4>About Us</h4>
         <p>We at the World War II Museum aim at bringing the knowledge and experiences of the books,
-			<br>
-			music, films, art, documents and more of World War II right to your home!
+            <br>
+            music, films, art, documents and more of World War II right to your home!
         </p>
         <div class="icons">
             <i class="fab fa-facebook-f"></i>
