replaced iframes with videos

--- a/film_and_music.html
+++ b/film_and_music.html
@@ -70,7 +70,9 @@
         <div class="exh-row">
             <div class="exh-col">
                 <h3>The Great Escape</h3>
-                <iframe width="100%" height="100%" src="images/TheGreatEscape.mp4"></iframe>
+                <video width="100%" height="100%" controls>
+                    <source src="images/TheGreatEscape.mp4" type="video/mp4">
+                </video>
                 <p>Based on Paul Brickhill’s nonfiction book of the same name (but done so with great fictitious
                     liberty), The Great Escape follows the escape of British Commonwealth soldiers from a POW camp in
                     Nazi Germany. The film has since become a classic in cinema history, especially for, as one might
@@ -80,7 +82,9 @@
 
             <div class="exh-col">
                 <h3>The Imitation Game</h3>
-                <iframe width="100%" height="100%" src="images/TheImitationGame.mp4"></iframe>
+                <video width="100%" height="100%" controls>
+                    <source src="images/TheImitationGame.mp4" type="video/mp4">
+                </video>
                 <p>The main theme from 1955 epic film The Dam Busters and now a mainstay of military concerts and
                     commemorations all year round, the lively march evokes the heroism and spirit of the members of
                     RAF’s 617 Squadron who contributed so significantly to the British war effort by destroying several
@@ -89,7 +93,9 @@
 
             <div class="exh-col">
                 <h3>Dunkirk</h3>
-                <iframe width="100%" height="100%" src="images/Dunkirk.mp4"></iframe>
+                <video width="100%" height="100%" controls>
+                    <source src="images/Dunkirk.mp4" type="video/mp4">
+                </video>
                 <p>There’s a lot more to this Christopher Nolan-directed film than Harry Styles’s cameo in it. The film
                     confronts the Allies’ evacuation of Dunkirk, on the shore of northern France, from the perspective
                     of land, sea, and air.</p>
@@ -99,14 +105,18 @@
         <div class="exh-row">
             <div class="exh-col">
                 <h3>Empire of the Sun</h3>
-                <iframe width="100%" height="100%" src="images/EmpireOfTheSun.mp4"></iframe>
+                <video width="100%" height="100%" controls>
+                    <source src="images/EmpireOfTheSun.mp4" type="video/mp4">
+                </video>
                 <p>A young Christian Bale stars as an English boy separated from his family in Japan-controlled China.
                 </p>
             </div>
 
             <div class="exh-col">
                 <h3>Jojo Rabbit</h3>
-                <iframe width="100%" height="100%" src="images/JojoRabbit.mp4"></iframe>
+                <video width="100%" height="100%" controls>
+                    <source src="images/JojoRabbit.mp4" type="video/mp4">
+                </video>
                 <p>Few comedians are bold enough to cast themselves as Adolf Hitler. Taika Waititi’s satirical spin on
                     Nazi Germany explores a more innocent perspective of the era from a Hitler Youth member, whose
                     perception of the war is clearly skewed by his naivety. This naivety meets reality, though, when he
@@ -116,7 +126,9 @@
 
             <div class="exh-col">
                 <h3>Black Book</h3>
-                <iframe width="100%" height="100%" src="images/BlackBook.mp4"></iframe>
+                <video width="50%" height="100%" controls>
+                    <source src="images/BlackBook.mp4" type="video/mp4">
+                </video>
                 <p>A Jewish singer goes undercover for the Dutch resistance in order to infiltrade the Nazi headquarters
                     in Netherlands.</p>
             </div>
